# aws-organized

./: .gitignore  Makefile  Makefile.AWSOrganized  Makefile.CI  Makefile.CodeQuality  Makefile.Project  README.md  pyproject.toml  setup.py
aws_organized/: aws_organized.py  aws_organized_policies.py  cli.py  helper.py  helpers.py  migrations.py  scp_migrations.py
aws_organized/extensions/delegated_administrators/: delegated_administrators.py  migrations.py
aws_organized/extensions/service_control_policies/: migrations.py  service_control_policies.py
aws_organized_policies/: aws_organized_policies.py  cli.py  helper.py
