# Copyright 2021 Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "aws-organized"
version = "0.1.1"
description = "Manage your AWS Organizations infrastructure using a simple file system based approach.  You create files and folders that correspond to AWS Organizations organizational units and accounts and this tooling manages changes for you."
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent", "Natural Language :: English"]
homepage = "https://github.com/aws-samples/aws-organized"
repository = "https://github.com/aws-samples/aws-organized"
readme = "README.md"

authors = [
    "Eamonn Faherty <eamonnf@amazon.co.uk>",
    "Zulia Shavaeva <zulis@amazon.co.uk>"
]
packages = [
    { include = "aws_organized", from = "." },
]
include = ["aws_organized"]

[tool.poetry.scripts]
aws-organized = "aws_organized.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7,<4"
click = "^7.1.2"
boto3 = "^1.16.4"
better-boto = "0.36.0"
PyYAML = "^5.3.1"
troposphere = "^2.6.3"
awacs = "^1.0.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/aws-samples/aws-organized/issues"
